# MathDiskret

./: Aljabar Boolean dan Gerbang Logika.html  CNAME  Centrality Graph.md  Logika dan Pembuktian.html  README.md  UTS.html  algoritma.html  aljabar-boolean.html  boolean.html  command.txt  genindex.html  graph.html  himpunan.html  intro.html  logika -dan-pembuktian.html  logika.html  markdown-notebooks.html  markdown.html  materi-himpunan.html  materiHimpunan.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
_sources/: Logika dan Pembuktian.md  algoritma.md  intro.md  notebooks.ipynb
grafik/: main.py
materi/: UTS.md  _toc.yml  algoritma.md  aljabar-boolean.md  boolean.md  graph.ipynb  graph.md  intro.md  materiHimpunan.md  notebooks.ipynb
materi/_build/.doctrees/: Aljabar Boolean dan Gerbang Logika.doctree  Logika dan Pembuktian.doctree  UTS.doctree  algoritma.doctree  aljabar-boolean.doctree  boolean.doctree  environment.pickle  graph.doctree  himpunan.doctree  intro.doctree  logika -dan-pembuktian.doctree  logika.doctree  markdown-notebooks.doctree  markdown.doctree  materi-himpunan.doctree  materiHimpunan.doctree  notebooks.doctree
materi/_build/html/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  materiHimpunan.html  notebooks.html  objects.inv  search.html  searchindex.js
materi/_build/html/_sources/: Aljabar Boolean dan Gerbang Logika.md
materi/_build/jupyter_execute/: himpunan.ipynb  markdown-notebooks.ipynb  materi-himpunan.ipynb  materiHimpunan.ipynb  notebooks.ipynb
tes-kode/: rekursif.py
